--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "Extended MongoDB Client",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
+    "test": "npm run babel-node ./test/index.js",
+    "babel-node": "./node_modules/.bin/babel-node",
     "build": "babel src -o index.js",
     "prepublish": "npm run build"
   },
