--- a/.babelrc
+++ b/.babelrc
@@ -9,5 +9,9 @@
       }
     ]
   ],
-  "plugins": ["transform-object-rest-spread", "transform-class-properties"]
+  "plugins": [
+    "transform-object-rest-spread",
+    "transform-class-properties",
+    "transform-es2015-classes"
+  ]
 }
