Refactoring and adding capped collection support

--- a/package.json
+++ b/package.json
@@ -20,7 +20,8 @@
   },
   "homepage": "https://github.com/dargolith/extended-mongodb-client#readme",
   "dependencies": {
-    "mongodb": "^3.0.4"
+    "mongodb": "^3.0.4",
+    "uuid": "^3.2.1"
   },
   "devDependencies": {
     "babel-cli": "^6.24.0",
