--- a/.babelrc
+++ b/.babelrc
@@ -1,17 +1,3 @@
 {
-  "presets": [
-    [
-      "env",
-      {
-        "targets": {
-          "node": "current"
-        }
-      }
-    ]
-  ],
-  "plugins": [
-    "transform-object-rest-spread",
-    "transform-class-properties",
-    "transform-es2015-classes"
-  ]
+  "presets": ["@babel/preset-env"]
 }
