--- a/package.json
+++ b/package.json
@@ -21,20 +21,24 @@
   "homepage": "https://github.com/dargolith/extended-mongodb-client#readme",
   "dependencies": {
     "mongodb": "^3.0.4",
+    "ramda": "^0.26.1",
     "uuid": "^3.2.1"
   },
   "devDependencies": {
-    "babel-cli": "^6.24.0",
-    "babel-core": "^6.24.0",
-    "babel-eslint": "^7.2.0",
-    "babel-plugin-transform-class-properties": "^6.24.1",
-    "babel-plugin-transform-es2015-classes": "^6.24.1",
-    "babel-plugin-transform-object-rest-spread": "^6.26.0",
-    "babel-preset-env": "^1.2.2",
+    "@babel/cli": "^7.2.3",
+    "@babel/core": "^7.1.6",
+    "@babel/node": "^7.0.0",
+    "@babel/preset-env": "^7.2.3",
     "blue-tape": "^1.0.0",
-    "eslint": "^3.18.0",
-    "eslint-config-airbnb-base": "^11.1.3",
+    "babel-eslint": "^10.0.1",
+    "babel-loader": "^8.0.5",
+    "eslint": "^5.12.1",
+    "eslint-config-airbnb-base": "^13.1.0",
+    "eslint-config-prettier": "^3.6.0",
     "eslint-plugin-import": "^2.9.0",
-    "eslint-plugin-node": "^4.2.1"
+    "eslint-plugin-node": "^8.0.1",
+    "eslint-plugin-prettier": "^3.0.1",
+    "prettier": "^1.16.0",
+    "prettier-eslint": "^8.8.2"
   }
 }
